[tool.poetry]
name = "threads"
version = "0.1.0"
description = ""
authors = [
    "Pavel Ivanov <pavel.ivanov.060988@gmail.com>",
    "Ihor Korolenko <enotshow275@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
dj-rest-auth ="^4.0.1"
drf-social-oauth2 ="^2.1.3"
drf-yasg = "^1.21.6"
pillow = "^10.0.0"
django-cors-headers = "^4.2.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
django-allauth ="^0.54.0"
cloudinary = "^1.33.0"
django-cloudinary-storage = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
